--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,14 @@
-<p>navbar works!</p>
+<div class="nav-container">
+  <div class="icon"></div>
+  <ul class="navs">
+    <li 
+      *ngFor="let link of links"
+      (click)="updateSelected(link)"
+      [attr.active]="selected.location === link.location"
+    >
+      <a routerLink="{{ link.location }}">
+        {{ link.title }}
+      </a>
+    </li>
+  </ul>
+</div>
