utilizes async pipe for rendering stories, tests pass

--- a/src/app/components/story-display/story-display.component.html
+++ b/src/app/components/story-display/story-display.component.html
@@ -1,6 +1,9 @@
-<div *ngIf="readyToDisplay()">
+<div *ngIf="stories$ | async; let stories; else loading">
   <app-story
-    *ngFor="let story of getDisplayStories()"
-    [story]="story"
+    *ngFor="let story of stories.slice(0, cursorPos); let ind = index;"
+    [storyId]="story.id"
+    [index]="ind"
   ></app-story>
+  <button (click)="incrementCursor()">Dare ya</button>
 </div>
+<ng-template>Loading Stories...</ng-template>
