--- a/src/app/components/story/story.component.sass
+++ b/src/app/components/story/story.component.sass
@@ -6,6 +6,12 @@
   display: block
   margin-bottom: 20px
   background-color: $black
+  position: relative
   .nav-container
     .navs
       padding: 0.5rem
+  .page-number
+    color: $black
+    position: absolute
+    top: 0.2rem
+    left: 0.2rem
